# rdb-pagination

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
rdb-pagination/: Cargo.toml  README.md
rdb-pagination-core/: Cargo.toml  README.md
rdb-pagination-core/src/: lib.rs  order_by_options.rs  order_method.rs  order_type.rs  pagination.rs  pagination_options.rs  types.rs
rdb-pagination-core/src/order_builder/: errors.rs  mod.rs
rdb-pagination-core/src/relationship/: errors.rs  mod.rs
rdb-pagination-core/src/sql/: join.rs  mod.rs  order_by.rs
rdb-pagination-core/tests/: sql.rs
rdb-pagination-derive/: Cargo.toml  README.md
rdb-pagination-derive/src/: lib.rs  panic.rs
rdb-pagination-derive/src/common/: mod.rs
rdb-pagination/src/: lib.rs
rdb-pagination/tests/: derive.rs  serde.rs  utoipa.rs
