[package]
name = "rdb-pagination-core"
version = "0.3.3"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/magiclen/rdb-pagination"
homepage = "https://magiclen.org/rdb-pagination"
keywords = ["database", "pagination", "order", "relational", "table"]
categories = ["rust-patterns", "database"]
description = "SQL query extension library for handling pagination and sorting in relational databases."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
utoipa = { version = "5", default-features = false, features = ["macros"], optional = true }

[features]
serde = ["dep:serde"]
utoipa = ["dep:utoipa"]
mysql = []
sqlite = []
mssql = []
mssql2008 = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
