[package]
name = "rdb-pagination"
version = "0.3.4"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/magiclen/rdb-pagination"
homepage = "https://magiclen.org/rdb-pagination"
keywords = ["database", "pagination", "order", "relational", "table"]
categories = ["rust-patterns", "database"]
description = "SQL query extension library for handling pagination and sorting in relational databases."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rdb-pagination-core = { version = "0.3.4", path = "../rdb-pagination-core", default-features = false }
rdb-pagination-derive = { version = "0.3.4", path = "../rdb-pagination-derive", default-features = false, optional = true }

[dev-dependencies]
educe = { version = "0.7", default-features = false, features = ["default"] }
serde_json = "1.0.50"
utoipa = { version = "5.5", default-features = false, features = ["macros"] }

[features]
default = ["derive"]

serde = ["rdb-pagination-core/serde"]
utoipa = ["rdb-pagination-core/utoipa"]
mysql = ["rdb-pagination-core/mysql"]
sqlite = ["rdb-pagination-core/sqlite"]
mssql = ["rdb-pagination-core/mssql"]
mssql2008 = ["rdb-pagination-core/mssql2008"]
derive = ["dep:rdb-pagination-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
